konst/tests/misc_tests/destructure_rec_ui_tests/move_out_deref_pat-err.stderr
error[E0507]: cannot move out of a shared reference
 --> tests/misc_tests/destructure_rec_ui_tests/move_out_deref_pat-err.rs:3:5
  |
3 |     konst::destructure_rec!{ [&bar, baz] = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^^^^^^^^^^^
  |                                |
  |                                data moved here
  |                                move occurs because `bar` has type `T`, which does not implement the `Copy` trait
  |
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider removing the borrow
  |
3 -     konst::destructure_rec!{ [&bar, baz] = foo}
3 +     konst::destructure_rec!{ [bar, baz] = foo}
  |

error[E0507]: cannot move out of a mutable reference
 --> tests/misc_tests/destructure_rec_ui_tests/move_out_deref_pat-err.rs:9:5
  |
9 |     konst::destructure_rec!{ [&mut bar, baz] = foo}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^^^^^^^^^^^
  |                                    |
  |                                    data moved here
  |                                    move occurs because `bar` has type `T`, which does not implement the `Copy` trait
  |
  = note: this error originates in the macro `$crate::__destructure_rec__recursive` which comes from the expansion of the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider removing the mutable borrow
  |
9 -     konst::destructure_rec!{ [&mut bar, baz] = foo}
9 +     konst::destructure_rec!{ [bar, baz] = foo}
  |
